# rust-bdecode

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benchmarks/: bdecode.rs
examples/: print.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bdecode.rs
props/: [ToishY] Hibike! Euphonium - THE COMPLETE SAGA (BD 1920x1080 x264 FLAC).torrent  [ToishY] K-ON - THE COMPLETE SAGA (BD 1920x1080 x.264 FLAC).torrent
src/: iterators.rs  lib.rs  parse_int.rs  stack_frame.rs  token.rs
tests/: torrent_files.rs
