[package]
name = "bdecode"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Árni Dagur <arni@dagur.eu>"]
description = "A Bencode decoder in Rust which uses the same algorithm as libtorrent."
repository = "https://github.com/ArniDagur/rust-bdecode"
edition = "2018"

[[bench]]
name = "bdecode"
path = "benchmarks/bdecode.rs"
harness = false

[dependencies]
memchr = "2"

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
url = "2"
